<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FragmentGame">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:text="@string/title"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:paddingBottom="20dp"
        android:text="@string/by"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="0dp"
        android:paddingEnd="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRock"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button"
            android:textColor="@color/white"
            android:text="@string/rock"/>

        <Button
            android:id="@+id/btnPaper"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button"
            android:textColor="@color/white"
            android:text="@string/paper"/>


        <Button
            android:id="@+id/btnScissors"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button"
            android:textColor="@color/white"
            android:text="@string/scissors"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/my_pick_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/player_pick"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/no_pick_yet"
            android:textColor="@color/title"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"

        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/phone_pick"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/computer_pick"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/no_pick_yet"
            android:textColor="@color/title"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        android:id="@+id/game_status"
        android:paddingTop="10dp"
        android:paddingBottom="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/who_is_the_winner"
        android:textColor="@color/title"
        android:textSize="25sp"
        android:textStyle="bold" />




</LinearLayout>